; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitLightAttnA.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_gx.c_GX_InitLightAttnA.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__gx_litobj = type { i8*, i8*, i8* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @GX_InitLightAttnA(i32* %0, i8* %1, i8* %2, i8* %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca %struct.__gx_litobj*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  store i8* %3, i8** %8, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = bitcast i32* %10 to %struct.__gx_litobj*
  store %struct.__gx_litobj* %11, %struct.__gx_litobj** %9, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = load %struct.__gx_litobj*, %struct.__gx_litobj** %9, align 8
  %14 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %13, i32 0, i32 2
  store i8* %12, i8** %14, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load %struct.__gx_litobj*, %struct.__gx_litobj** %9, align 8
  %17 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %16, i32 0, i32 1
  store i8* %15, i8** %17, align 8
  %18 = load i8*, i8** %8, align 8
  %19 = load %struct.__gx_litobj*, %struct.__gx_litobj** %9, align 8
  %20 = getelementptr inbounds %struct.__gx_litobj, %struct.__gx_litobj* %19, i32 0, i32 0
  store i8* %18, i8** %20, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
